--- a/01__Lesson-Homework/.gitignore
+++ b/01__Lesson-Homework/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
-*.log
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Папки с кэшем
+.cache/
+dist/
+build/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Логи
+*.log
+
+# Системные файлы
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Исключение локальной среды разработки
+.env
+.env.local
+.env.*.local
+
+# Исключение IDE и редакторов
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Исключение типов файлов
+*.swp
+*.swo
+*.bak
+*.tmp
