--- a/01__Lesson-Homework/.gitignore
+++ b/01__Lesson-Homework/.gitignore
@@ -1,34 +1,1 @@
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Папки с кэшем
-.cache/
-dist/
-build/
-
-# Логи
-*.log
-
-# Системные файлы
-.DS_Store
-Thumbs.db
-
-# Исключение локальной среды разработки
-.env
-.env.local
-.env.*.local
-
-# Исключение IDE и редакторов
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# Исключение типов файлов
-*.swp
-*.swo
-*.bak
-*.tmp
+node_modules
